# releases2repo

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/releases2repo/: __about__.py  __init__.py  __main__.py  _libreleases2repo.py  libreleases2repo.py
tests/: __init__.py
