[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "releases2repo"
dynamic = [
  "version",
  "urls",
  ]
description = 'take package files from github releases and turn them into a repo that pacman can use'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "M. Greyson Christoforo", email = "grey@christoforo.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.scripts]
r2repo = "releases2repo.__main__:entrypoint"

[tool.hatch.metadata.hooks.vcs.urls]
homepage = "https://github.com/greyltc/releases2repo"
source = "https://github.com/greyltc/releases2repo.git"
source_archive = "https://github.com/greyltc/releases2repo/archive/{commit_hash}.zip"

[tool.hatch.build.hooks.vcs]
version-file = "src/releases2repo/__about__.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/releases2repo tests}"

[tool.coverage.run]
source_pkgs = ["releases2repo", "tests"]
branch = true
parallel = true
omit = [
  "src/releases2repo/__about__.py",
]

[tool.coverage.paths]
releases2repo = ["src/releases2repo", "*/releases2repo/src/releases2repo"]
tests = ["tests", "*/releases2repo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
